# senior-thesis

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
configs/: README.md  dpo_example.yaml  multi_model_dpo.yaml  simple_dpo.yaml
src/: compo.py  config.py  data.py  dpo.py  model.py  train.py
utils/: golden-ratio-search.py
